# sift

./: .gitignore  Cargo.toml  README.md
docs/: cheatsheet.md  language-reference.md
examples/: agent-patterns.sq  basics.sq  batch.sq  filters.sq  intersection.sq  let-bindings.sq  output-modes.sq  pipe.sq  ranking.sq  set-operations.sq  threshold.sq  union.sq  weighted-mix.sq
scripts/: charts.sh  gh-charts.sh
src/: core.rs  eval.rs  fusion.rs  lex.rs  main.rs  parse.rs  rg.rs  sem.rs  util.rs
tests/: examples.rs
