[package]
name = "sift-search"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Sift — a DSL for agents to search codebases in faster, deeper, and more sophisticated ways"

[[bin]]
name = "ag"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
colored = "3"
