[package]
name = "sift-search"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Sift — a DSL for agents to search codebases in faster, deeper, and more sophisticated ways"
repository = "https://github.com/nbardy/sift"
homepage = "https://github.com/nbardy/sift"
keywords = ["search", "code-search", "ripgrep", "embeddings", "agents"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[[bin]]
name = "ag"
path = "src/main.rs"

[features]
default = []
lex = ["tantivy"]
sem = ["ort", "tokenizers", "hf-hub"]
full = ["lex", "sem"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
colored = "3"
walkdir = "2"
ignore = "0.4"
glob = "0.3"

# lex backend (feature-gated)
tantivy = { version = "0.22", optional = true }

# sem backend (feature-gated)
ort = { version = "2.0.0-rc.11", optional = true, features = ["download-binaries"] }
tokenizers = { version = "0.21", optional = true }
hf-hub = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
